--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,12 +1,11 @@
 cmake_minimum_required(VERSION 3.17)
-project(my_project_name)
+project(oop-poly-operator-overloading)
 
 set(CMAKE_CXX_STANDARD 14)
 
 include_directories(src)
 
 add_subdirectory(src)
-add_subdirectory(tst)
 
 ## Use next line if you are going to use Google Test
 # add_subdirectory(lib/googletest)
